--- a/Trang3.html
+++ b/Trang3.html
@@ -36,14 +36,14 @@
     
         <div class="content">
             <form name="form1" action="" method="post">
-                <table class= "table_Trang3">
+                <table class= "tableTrang3">
                     <tr>
                         <td>First Name</td>
-                        <td><input type="text" name="first_name" value="" required></td>
+                        <td><input type="text" name="first_name" value="" maxlength="25" required></td>
                     </tr>
                     <tr>
                         <td>Last Name</td>
-                        <td><input type="text" name="last_name" value="" required></td>
+                        <td><input type="text" name="last_name" value="" maxlength="25" required></td>
                     </tr>
                     <tr>
                         <td>Year old</td>
