--- a/Page1.html
+++ b/Page1.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
         <title>Page 1</title>
         <link rel="stylesheet" href="style.css">
-        <meta charset="utf-8" />
     </head>
     <body>
-        <div class="menu">
-            <ul>
-                <li>Thông báo</li>
-                <li>Chương trình đào tạo</li>
-                <li>Kế hoạch</li>
-                <li>Tra cứu sinh viên
+        <div>
+            <ul class="menu">
+                <li><a href="#">Thông báo</a></li>
+                <li><a href="#">Chương trình đào tạo</a></li>
+                <li><a href="#">Kế hoạch</a></li>
+                <li><a href="#">Tra cứu sinh viên</a>
                     <ul>
-                        <li>SV đang học</li>
-                        <li>SV ngừng học</li>
-                        <li>SV bị hủy đăng ký học do chây ỳ đóng học phí</li>
-                        <li>SV lười học thông minh</li>
+                        <li><a href="#">SV đang học</a></li>
+                        <li><a href="#">SV ngừng học</a></li>
+                        <li><a href="#">SV bị hủy đăng ký học do chây ỳ đóng học phí</a></li>
+                        <li><a href="#">SV lười học thông minh</a></li>
                     </ul>
                 </li>
-                <li>Quy chế & quy định</li>
-                <li>Hướng dẫn</li>
+                <li><a href="#">Quy chế & quy định</a></li>
+                <li><a href="#">Hướng dẫn</a></li>
             </ul>
-        </div>
-    
-        <div class="content">
         </div>
         <div class="footer">
             <footer>//</footer>
         </div>
-        
     </body>
 </html>
