--- a/Page2.html
+++ b/Page2.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="content">
-            <table class="table_page2" >
+            <table class="table-page2" >
                 <tr>
                     <td>ID</td>
                     <td>Name</td>
